@@ -1,3 +1,4 @@
 /Alien-Role-Dino-*
 /.build
+/.tmp
 *.swp
