@@ -41,4 +41,4 @@ cpan = 1
 
 [PruneFiles]
 filename = xt/author/version.t
-
+match = ^.tmp/
