@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Compatability with ALIEN_DOWNLOAD_RULE overrides (gh#10)
 
 0.07      2022-02-27 16:35:13 -0700
   - Make Alien::cmake3 and Alien::Autotools test prereqs optional (gh#8)
